Actualizar eventos de carga de página y mejorar descripciones en varios componentes

--- a/src/components/NewsComponentEng.astro
+++ b/src/components/NewsComponentEng.astro
@@ -589,7 +589,7 @@ const publi = [
 </section>
 
 <script is:inline>
-    document.addEventListener('DOMContentLoaded', () => {
+    document.addEventListener('astro:page-load', () => {
         document.addEventListener('click', (event) => {
             const target = event.target.closest('button');
 
