--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ const texts = [
 <Layout description={texts[0].page} title={texts[0].title}>
     <Header id="top" />
     <Hero title={texts[0].title} description={texts[0].description} />
-    <Heading title="Proyectos" subtitle="Selección de los más renombrados" />
+    <Heading title="Proyectos" subtitle="Selección de los más destacados" />
     <Projects />
     <Heading
         title="Noticias"
