--- a/src/components/NewsComponent.astro
+++ b/src/components/NewsComponent.astro
@@ -586,7 +586,7 @@ const publi = [
 </section>
 
 <script is:inline>
-    document.addEventListener('DOMContentLoaded', () => {
+    document.addEventListener('astro:page-load', () => {
         document.addEventListener('click', (event) => {
             const target = event.target.closest('button');
 
