--- a/src/components/about/TeamEng.astro
+++ b/src/components/about/TeamEng.astro
@@ -183,7 +183,7 @@ const team2 = [
 </section>
 
 <script is:inline>
-    document.addEventListener('DOMContentLoaded', () => {
+    document.addEventListener('astro:page-load', () => {
         document.addEventListener('click', (event) => {
             const target = event.target.closest('button');
 
