Actualizar etiquetas de encabezado y mejorar descripciones en varios componentes

--- a/src/components/indexEng.astro
+++ b/src/components/indexEng.astro
@@ -21,7 +21,7 @@ const texts = [
 <Layout description={texts[0].page} title={texts[0].title}>
     <Header id="top" />
     <Hero title={texts[0].title} description={texts[0].description} />
-    <Heading title="Projects" subtitle="Selection of the most outstanding" />
+    <Heading title="Projects" subtitle="Selection of the most renowned." />
     <ProjectsEng />
     <Heading
         title="News"
