--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,9 +11,10 @@ import IndexPublicationsComponent from '../components/IndexPublicationsComponent
 
 const texts = [
     {
-        page: 'Sambataro Arquitectos es un estudio de arquitectura con más de 40 años de experiencia en el mercado. Nos especializamos en proyectos de viviendas unifamiliares, multifamiliares, comerciales y de oficinas. Nuestro objetivo es crear espacios que se adapten a las necesidades de nuestros clientes y que reflejen su personalidad.',
+        page: 'Sambataro Arquitectos es un estudio de arquitectura con más de 40 años de experiencia en el mercado.',
         title: 'Sambataro Arquitectos',
-        description: '',
+        description:
+            'Sambataro Arquitectos es un estudio de arquitectura con más de 40 años de experiencia en el mercado',
     },
 ];
 ---
