--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -9,7 +9,7 @@ const lang = getLangFromUrl(Astro.url);
         <meta charset="utf-8" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="viewport" content="width=device-width" />
-        <title>Astro</title>
+        <!-- <title></title> -->
     </head>
     <body class="relative">
         <slot />
