feat: add react-google-recaptcha dependency; update team member details
- Added "react-google-recaptcha" version 3.1.0 to package.json.
- Updated the name of Arq. Andrés Cumsille C. to include years (1968-2025) in both Team.astro and TeamEng.astro.
- Commented out the inline script in Header.astro for future reference.

--- a/src/components/about/Team.astro
+++ b/src/components/about/Team.astro
@@ -50,8 +50,8 @@ const team2 = [
     },
     {
         position: 'Patrimonio y restauración',
-        name1: 'Arq. Andrés Cumsille C.',
-        name2: '',
+        name1: 'Arq. Andrés Cumsille C. ',
+        name2: '(1968-2025)',
     },
     {
         position: 'Ingeniería estructural y mecánica',
