--- a/src/components/about/TeamEng.astro
+++ b/src/components/about/TeamEng.astro
@@ -51,7 +51,7 @@ const team2 = [
     {
         position: 'Heritage and Restoration',
         name1: 'Architect Andrés Cumsille C.',
-        name2: '',
+        name2: '(1968-2025)',
     },
     {
         position: 'Structural and Mechanical Engineering',
