--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -128,7 +128,7 @@ const t = useTranslations(lang);
     </div>
 </header>
 
-<script is:inline>
+<!-- <script is:inline>
     const audio = document.querySelector('#audio');
     const playButton = document.querySelector('#play');
     const pauseButton = document.querySelector('#pause');
@@ -148,4 +148,4 @@ const t = useTranslations(lang);
             pauseButton.classList.add('hidden');
         }
     });
-</script>
+</script> -->
