--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,28 +20,41 @@ import { ViewTransitions } from 'astro:transitions';
         />
         <meta property="og:title" content="Sambataro Arquitectos" />
         <meta property="og:type" content="website" />
-
-        <meta name="viewport" content="width=device-width" />
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-        <link rel="manifest" href="/site.webmanifest" />
-        <meta property="og:image" content="/public/publications/alf2.avif" />
-
-        <!-- Twitter Card data -->
-        <meta name="twitter:card" content="summary" />
-        <meta name="twitter:site" content="@sambataroarq" />
-        <meta name="twitter:title" content="Sambataro Arquitectos" />
+        <meta property="og:site_name" content="Sambataro Arquitectos" />
+        <meta name="theme-color" content="#ffffff" />
+        <meta name="color-scheme" content="light dark" />
         <meta
+            property="og:keywords"
+            content="arquitectura, teatro, escenotecnia, maquinaria escénica, Sambataro Arquitectos, asesoría esceno-técnica, mantenimiento preventivo y correctivo, arquitectura teatral, proyectos arquitectónicos, diseño escénico, arquitectura contemporánea, diseño de teatros, ingeniería escénica, arquitectura sustentable, proyectos culturales, diseño arquitectónico, arquitectura argentina, arquitectura latinoamericana, arquitectura escénica, arquitectura de espectáculos, arquitectura de eventos, diseño de espacios escénicos, arquitectura de teatros, proyectos de arquitectura teatral, diseño de maquinaria escénica, asesoría en arquitectura teatral, proyectos de escenotecnia"
+        />
+        <meta name="viewport" content="width=device-width" /><link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="/apple-touch-icon.png"
+        /><link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" /><link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/favicon-16x16.png"
+        /><link rel="manifest" href="/site.webmanifest" /><meta
+            property="og:image"
+            content="/public/publications/alf2.avif"
+        /><meta name="twitter:card" content="summary" /><meta
+            name="twitter:site"
+            content="@sambataroarq"
+        /><meta name="twitter:title" content="Sambataro Arquitectos" /><meta
             name="twitter:description"
             content="Sambataro Arquitectos es un estudio de arquitectura con más de 40 años de experiencia en el mercado."
-        />
-        <meta name="twitter:image" content="/public/publications/alf2.avif" />
-        <meta name="twitter:image:alt" content="/public/publications/alf2.avif" />
+        /><meta name="twitter:image" content="/public/publications/alf2.avif" /><meta
+            name="twitter:image:alt"
+            content="/public/publications/alf2.avif"
+        /><title>Sambataro Arquitectos</title></head
+    >
 
-        <title>Sambataro Arquitectos</title>
-        <ViewTransitions />
-    </head>
+    <!-- Twitter Card data -->
+
+    <ViewTransitions />
+
     <body
         class="bg-primary-100 text-primary-950 antialiased transition dark:bg-primary-950 dark:text-primary-200">
         <main>
@@ -114,4 +127,6 @@ import { ViewTransitions } from 'astro:transitions';
             }
         }
     </script>
+
+
 </html>
